kubernetes/apps/kubeflow/ray/app/raycluster.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ray-workers-head
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/kubeflow/sa/default-editor"
  - to:
    - operation:
        ports:
        - "6379"
        - "6380"
        - "6381"
        - "6382"
        - "6383"
        - "52365"
        - "8080"
        - "10012"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    ray.io/headless-worker-svc: raycluster-istio
  name: raycluster-istio-headless-svc
spec:
  clusterIP: None
  selector:
    ray.io/cluster: kubeflow-raycluster
  publishNotReadyAddresses: true
  ports:
  - name: node-manager-port
    port: 6380
    appProtocol: grpc
  - name: object-manager-port
    port: 6381
    appProtocol: grpc
  - name: runtime-env-agent-port
    port: 6382
    appProtocol: grpc
  - name: dashboard-agent-grpc-port
    port: 6383
    appProtocol: grpc
  - name: dashboard-agent-listen-port
    port: 52365
    appProtocol: http
  - name: metrics-export-port
    port: 8080
    appProtocol: http
  - name: max-worker-port
    port: 10012
    appProtocol: grpc
